No fixed background on mobile

--- a/web/app/themes/maxkomp_theme/assets/styles/layouts/_pages.scss
+++ b/web/app/themes/maxkomp_theme/assets/styles/layouts/_pages.scss
@@ -35,7 +35,9 @@ section {
 .jumbo {
   background: $brand-blue;
   background-size: cover;
-  background-attachment: fixed;
+  @include media-breakpoint-up(md) {
+    background-attachment: fixed;
+  }
   color: $gray-dark;
   padding-top: 0;
   padding-bottom: 0;
